force-app/main/default/objects/mcdm_15__DefaultCampaignPersonalization__c/mcdm_15__DefaultCampaignPersonalization__c.object-meta.xml
<CustomObject>
    <label>Default Campaign Personalization</label>
    <nameField>
        <displayFormat>DCP-{0}</displayFormat>
        <label>Default Campaign Personalization Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Default Campaign Personalizations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>