force-app/main/default/objects/mcdm_15__DefaultCampaignPersonalization__c/fields/mcdm_15__blockId__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__blockId__c</fullName>
    <description>The identifying ID for the Block that the Default Personalization is for</description>
    <label>Block ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>