force-app/main/default/objects/mcdm_15__DefaultCampaignPersonalization__c/fields/mcdm_15__campaignId__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__campaignId__c</fullName>
    <description>The Salesforce ID of Campaign this Default Personalization is for</description>
    <label>campaignId</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>