force-app/main/default/objects/mcdm_15__DefaultCampaignPersonalization__c/fields/mcdm_15__lookupId__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__lookupId__c</fullName>
    <description>The ID corresponding to the object being personalized</description>
    <label>Lookup ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>