force-app/main/default/objects/mcdm_15__DefaultCampaignPersonalization__c/fields/mcdm_15__lookupType__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__lookupType__c</fullName>
    <description>The type for the corresponding Lookup ID field</description>
    <label>Lookup Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>