force-app/main/default/objects/mcdm_15__DefaultCampaignPersonalization__c/fields/mcdm_15__value__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__value__c</fullName>
    <description>The value of the Default Personalization</description>
    <label>value</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>